# proton-drive-linux

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/pdfs-cli/: Cargo.toml
crates/pdfs-cli/src/: main.rs
crates/pdfs-core/: Cargo.toml
crates/pdfs-core/src/: auth.rs  cache.rs  config.rs  control.rs  db.rs  error.rs  lib.rs  localindex.rs  profile.rs  search.rs  service.rs  shell.rs  syncignore.rs
crates/pdfs-core/src/db/: activity.rs  cache.rs  devices.rs  local.rs  maintenance.rs  migrations.rs  mod.rs  nodes.rs  ops.rs  photos.rs  pins.rs  state.rs  sync.rs  tests.rs  trash.rs  utils.rs
crates/pdfs-fuse/: Cargo.toml
crates/pdfs-fuse/src/: background.rs  control.rs  devices.rs  drain.rs  filesystem.rs  lib.rs  mount.rs  photos.rs  profile.rs  reads.rs  sharing.rs  state.rs  sync.rs  transfers.rs  upload.rs  workers.rs
crates/pdfs-fuse/src/sync/: engine.rs  local_scan.rs  model.rs  planner.rs
crates/pdfs-gui/: Cargo.toml  build.rs
crates/pdfs-gui/resources/: pdfs.gresource.xml
crates/pdfs-gui/src/: activation.rs  app.rs  main.rs  prompt.rs
crates/pdfs-gui/src/app/: main.rs
crates/pdfs-gui/src/app/pages/: activity.rs  browser.rs  devices.rs  login.rs  mod.rs  photo_viewer.rs  photos.rs  shared.rs  shared_by_me.rs  status.rs  trash.rs  verify.rs
crates/pdfs-gui/src/app/widgets/: details.rs  mod.rs  share_dialog.rs
docs/: ARCHITECTURE.md  BUGS.md  DEVELOPMENT.md  RECOVERY.md  TESTING.md  bugs.md
packaging/: PKGBUILD  io.narl.proton-drive-linux-tray.desktop  io.narl.proton-drive-linux.desktop  proton-drive-linux.spec  proton-drive.service
scripts/: fuse-acceptance.py  fuse-acceptance.sh
