[workspace]
resolver = "2"
members = ["crates/pdfs-core", "crates/pdfs-fuse", "crates/pdfs-cli", "crates/pdfs-gui"]

[workspace.package]
version = "0.2.5"
edition = "2024"
license = "MIT"
authors = ["Nils Pukropp <contact@narl.io>"]
rust-version = "1.96"

[workspace.dependencies]
proton-sdk = "0.1.4"
proton-drive-rs = "0.1.4"

# Internal crates.
pdfs-core = { path = "crates/pdfs-core" }
pdfs-fuse = { path = "crates/pdfs-fuse" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
ignore = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
fuser = "0.17"
libc = "0.2"

[patch.crates-io]
# Track the SDK's `main` on GitHub rather than a sibling checkout, so a clean
# clone (and CI, and the PKGBUILD) builds without the working tree next door.
# `cargo update -p proton-sdk -p proton-drive-rs` pulls newer pushes.
proton-sdk = { git = "https://github.com/narrrl/proton-sdk-rs", branch = "main" }
proton-drive-rs = { git = "https://github.com/narrrl/proton-sdk-rs", branch = "main" }
