[package]
name = "pdfs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI for the Proton Drive Linux client"

[[bin]]
name = "pdfs"
path = "src/main.rs"

[dependencies]
pdfs-core.workspace = true
pdfs-fuse.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rpassword.workspace = true
serde_json.workspace = true
