[package]
name = "pdfs-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pdfs-tray"
path = "src/main.rs"

[[bin]]
name = "pdfs-app"
path = "src/app.rs"

[[bin]]
name = "pdfs-prompt"
path = "src/prompt.rs"

[dependencies]
pdfs-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio.workspace = true
ksni = "0.2"
gtk4 = { version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
async-channel = "2"
exif = { version = "0.6", package = "kamadak-exif" }
